--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <section id="about">
         <h2>About Me</h2>
-        <img src="profile.jpg" alt="Your Image">
+        <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=300" alt="Your Image">
         <p>Hi, I'm Rishika Vemparala, a passionate web developer with experience in HTML, CSS, and JavaScript. I love creating interactive and responsive web applications. Welcome to my portfolio!</p>
     </section>
 
@@ -39,13 +39,13 @@
         <h2>Projects</h2>
         <div class="project">
             <h3>Project 1</h3>
-            <img src="project1.jpg" alt="Project 1">
-            <p>Description of Project 1...</p>
+            <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=300" alt="Project 1">
+            <p>Smart Home Automation System: An IoT-based project that integrates smart devices, enabling users to control lighting, temperature, and security systems remotely via a mobile app, enhancing convenience and energy efficiency.</p>
         </div>
         <div class="project">
             <h3>Project 2</h3>
-            <img src="project2.jpg" alt="Project 2">
-            <p>Description of Project 2...</p>
+            <img src="https://images.unsplash.com/photo-1506765515384-028b60a970df?w=300" alt="Project 2">
+            <p>E-Learning Platform: A web application designed to facilitate online education, featuring interactive course modules, quizzes, and progress tracking, aimed at providing an engaging learning experience for students and educators alike.   </p>
         </div>
     </section>
 
@@ -58,7 +58,7 @@
     
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: rishika123@gmail.com</p>
+        <p>Email: your.email@rishikavemparala.com</p>
         <p>Phone: (123) 456-7890</p>
     </section>
 
